--- a/latex/p_references.bib
+++ b/latex/p_references.bib
@@ -5,17 +5,26 @@
 \begin{document}
     @phdthesis{torranoGimenez2015study,
         title={Study of stochastic and machine learning techniques for anomaly-based web attack detection},
-        author={Giménez, Carmen Torrano},
+        author={Torrano-Giménez, Carmen},
         year={2015},
         school={Universidad Carlos III de Madrid}
     }
-    @inproceedings{khan2009survey,
-        title={A survey of recent trends in one class classification},
-        author={Khan, Shehroz S and Madden, Michael G},
-        booktitle={Irish Conference on Artificial Intelligence and Cognitive Science},
-        pages={188--197},
-        year={2009},
-        organization={Springer Berlin Heidelberg}
+    @inproceedings{gimenez2015paper,
+        title={HTTP-WS-AD: Anomaly Detector oriented to web applications and services},
+        author={Giménez, José and Cappo, Cristian},
+        booktitle={Computing Conference (CLEI), 2015 Latin American},
+        year={2015},
+        organization={IEEE}
+    }
+    @article{khan2014one,
+        title={One-class classification: taxonomy of study and review of techniques},
+        author={Khan, Shehroz and Madden, Michael},
+        journal={The Knowledge Engineering Review},
+        volume={29},
+        number={3},
+        pages={345--374},
+        year={2014},
+        publisher={Cambridge University Press}
     }
     @inproceedings{parhizkar2015oc,
         title={OC-WAD: A one-class classifier ensemble approach for anomaly detection in web traffic},
@@ -29,7 +38,6 @@
         title={Anomaly detection of web-based attacks},
         author={Kruegel, Christopher and Vigna, Giovanni},
         booktitle={Proceedings of the 10th ACM conference on Computer and communications security},
-        pages={251--261},
         year={2003},
         organization={ACM}
     }
@@ -39,7 +47,6 @@
         journal={Computer Networks},
         volume={48},
         number={5},
-        pages={717--738},
         year={2005},
         publisher={Elsevier}
     }
@@ -87,7 +94,7 @@
         title={CSIC TORPEDA 2012 HTTP data sets},
         author={Torrano-Giménez, Carmen and Pérez, Alejandro and Álvarez, Gonzalo},
         year={2012},
-        howpublished={\url{http://www.tic.itefi.csic.es/torpeda/datasets.html}},
+        howpublished={\url{http://www.tic.itefi.csic.es/torpeda}},
         note={Accessed: July-2017}
     }
     @misc{encyMathEntropy,
